--- a/content/post/2020-10-24-halloween-poster.Rmd
+++ b/content/post/2020-10-24-halloween-poster.Rmd
@@ -55,7 +55,7 @@ font_add("Fiendish", "fonts/Font3/Fiendish.ttf")
 
 Now we can start to build our poster. We use `magick` to read in the hse image file. It initially has a white border that is then cropped out. On top on this we place a yellow block to cover existing _Coronavirus_ and _Covid-19_ text (we had discerned the exact shade of yellow beforehand, thank you `colorfindr`). Then we replace these with the same text in our Halloween fonts.
 ```{r background_image}
-corona <- image_read("images/covid.jpg") %>% 
+corona <- image_read("https://raw.githubusercontent.com/eugene100hickey/crazy_quasar/master/content/post/images/covid.jpg") %>% 
   image_crop("625x900+185+50") %>% 
   image_draw()
 # get rid of existing text by putting colour blocks over them
